# Flashcore

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  database.py  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py  002_soft_delete_products.py  003_drop_carts.py  004_add_payment_intent.py  placeholder.txt
backend/models/: __init__.py  cart.py  category.py  mixins.py  order.py  product.py  review.py  user.py
backend/routes/: auth.py  cart.py  orders.py  payments.py  products.py
backend/schemas/: __init__.py  order.py  product.py  token.py  user.py
backend/services/: __init__.py  auth.py  cart.py  cloudinary.py  email.py  order.py  payment.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.jsx  main.jsx
frontend/src/components/: AdminRoute.tsx  CartDrawer.tsx  Categories.tsx  CtaSection.tsx  FeaturedProducts.tsx  Hero.tsx  Marquee.tsx  Navbar.tsx  Testimonials.tsx
frontend/src/components/admin/: ProductsTab.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: AdminDashboard.tsx  Auth.tsx  Checkout.tsx  Dashboard.tsx  Home.tsx  ProductDetail.tsx  Products.tsx
frontend/src/store/: authStore.ts  cartStore.ts
